[project]
name = "thrml-boost"
version = "0.2.0"
description = "Thermodynamic HypergRaphical Model Library (THRML) — performance-optimized fork"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  {name = "Extropic AI"},
  {name = "dek3rr"},
]

urls = { repository = "https://github.com/dek3rr/thrml-boost" }

dependencies = [
    "equinox>=0.11.2",
    "jaxtyping>=0.2.23",
]

[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
examples = [
    "jupyter>=1.0",
    "matplotlib>=3.7.1",
    "networkx>=2.6.3",
    "dwave_networkx>=0.8.0",
    "scikit-learn>=1.7.0",
]
testing = [
    "coverage==7.6.10",
    "pytest==8.3.4",
    "nbmake==1.5.5",
    "networkx>=2.6.3",
    "optax>=0.2.4",
    "setuptools>=75.0",
]
development = [
    "ruff==0.15.2",
    "pyright==1.1.408",
    "pytest-cov==4.0.0",
    "pytest-asyncio==0.21.0",
]
docs = [
    "hippogriffe==0.2.0",
    "griffe==1.7.3",
    "mkdocs==1.6.1",
    "mkdocs-include-exclude-files==0.1.0",
    "mkdocs-ipynb==0.1.0",
    "mkdocs-material==9.6.7",
    "mkdocstrings[python]==0.28.3",
    "pymdown-extensions==10.14.3",
]

[tool.setuptools]
packages = { find = { include = ["thrml_boost", "thrml_boost.*"] } }

[tool.ruff]
extend-include = ["*.ipynb"]
src = []
line-length = 120

[tool.ruff.lint]
ignore = ["F722"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment = true
include = ["thrml_boost"]
venvPath = "."
venv = "venv"
